animation problem fix,white space fixed

--- a/src/app/all-component/public/login/login.component.css
+++ b/src/app/all-component/public/login/login.component.css
@@ -25,5 +25,5 @@ button{
 }
 body{
   padding-top: 130px;
-  background-image: url(../home/assets/images/choosing-bg.jpg);
+  background-image: url(../../../../assets/images/choosing-bg.jpg);
 }
